Fix unsafe reflection method constantize called with parameter value

--- a/app/views/amendments/browse_section.html.erb
+++ b/app/views/amendments/browse_section.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <% if modification_type.use_field?(:section) %>
+  <% if modification_class.use_field?(:section) %>
     <% if section %>
       <% unless locked_section? %>
         <%= reset_link(browse_section_amendment_path(modification_type: modification_type, locked_section: locked_section?, locked_organism: locked_organism?)) %>
@@ -13,7 +13,7 @@
     <% end %>
   <% end %>
 
-  <% if modification_type.use_field?(:service) %>
+  <% if modification_class.use_field?(:service) %>
     <% if service %>
       <%= reset_link(browse_section_amendment_path(modification_type: modification_type, section_id: section, service_or_organism_id: service, locked_section: locked_section?, locked_organism: locked_organism?)) %>
       <%= browse_title(service) %>
@@ -26,7 +26,7 @@
     <% end %>
   <% end %>
 
-  <% if modification_type.use_field?(:organism) %>
+  <% if modification_class.use_field?(:organism) %>
     <% if organism %>
       <% unless locked_organism? %>
         <%= reset_link(browse_section_amendment_path(modification_type: modification_type, section_id: section, service_or_organism_id: organism, locked_section: locked_section?, locked_organism: locked_organism?)) %>
@@ -41,7 +41,7 @@
     <% end %>
   <% end %>
 
-  <% if modification_type.use_field?(:program) && ((service && service.class != Integer) || (organism && organism.class != Integer)) %>
+  <% if modification_class.use_field?(:program) && ((service && service.class != Integer) || (organism && organism.class != Integer)) %>
     <% if program %>
       <%= reset_link(browse_section_amendment_path(modification_type: modification_type, section_id: section, service_or_organism_id: service || organism, locked_section: locked_section?, locked_organism: locked_organism?)) %>
       <%= browse_title(program) %>
@@ -56,6 +56,6 @@
 </div>
 
 <%= hidden_field(:modification, :section_id, value: section.id) if section %>
-<%= hidden_field(:modification, :service_id, value: service.id) if modification_type.use_field?(:service) && service %>
-<%= hidden_field(:modification, :organism_id, value: organism.id) if modification_type.use_field?(:organism) && organism %>
-<%= hidden_field(:modification, :program_id, value: program.id) if modification_type.use_field?(:program) && program %>
+<%= hidden_field(:modification, :service_id, value: service.id) if modification_class.use_field?(:service) && service %>
+<%= hidden_field(:modification, :organism_id, value: organism.id) if modification_class.use_field?(:organism) && organism %>
+<%= hidden_field(:modification, :program_id, value: program.id) if modification_class.use_field?(:program) && program %>
