--- a/app/views/modifications/_form.html.erb
+++ b/app/views/modifications/_form.html.erb
@@ -1,4 +1,5 @@
 <%= bootstrap_form_for([amendment.becomes(Amendment), modification.becomes(Modification)], layout: :horizontal, label_col: "col-sm-3 text-md-right", control_col: "col-sm-7") do |f| %>
+
   <% if modification.errors.any? %>
     <div id="error_explanation" class="alert alert-danger">
       <h2><%= t('activerecord.errors.prohibited_from_being_saved', :model => Modification.model_name.human.downcase, :count => modification.errors.count) %></h2>
@@ -21,30 +22,40 @@
     </div>
   <% end %>
 
-  <div class="row px-3">
-    <div id="section" class="pseudoiframe col-12 col-sm-6"
-      src="<%= browse_section_amendment_path(id: amendment, section_id: modification.section, service_id: modification.service_id, program_id: modification.program_id, locked_section: modification.locked_section?) %>" reset-src="<%= browse_section_amendment_path(id: amendment, section_id: modification.section, locked_section: modification.locked_section?) %>"
-      ></div>
-    <div id="chapter" class="pseudoiframe col-12 col-sm-6"
-      src="<%= browse_chapter_amendment_path(id: amendment, chapter_id: modification.chapter_id, article_id: modification.article_id, concept_id: modification.concept_id, subconcept_id: modification.subconcept_id) %>" reset-src="<%= browse_chapter_amendment_path(id: amendment) %>"
-      ></div>
+  <div class="tab-content">
+    <% (modification.locked_type? ? [modification.class] : amendment.allowed_modifications).each do |modification_class| %>
+
+      <div id="<%= modification_class.name.demodulize %>" class="tab-pane<% if modification.locked_type? %> active<% end %>">
+        <div class="row px-3">
+
+          <div id="section" class="pseudoiframe col-12 col-sm-6" src="<%= browse_section_amendment_path(id: amendment, modification_type: modification_class.to_param, section_id: modification.section, service_or_organism_id: modification_class.use_field?(:service) ? modification.service : modification.organism, program_id: modification.program, locked_section: modification.locked_section?, locked_organism: modification.locked_organism?) %>"></div>
+
+          <div id="chapter" class="pseudoiframe col-12 col-sm-6" src="<%= browse_chapter_amendment_path(id: amendment, chapter_id: modification.chapter, article_id: modification.article, concept_id: modification.concept, subconcept_id: modification.subconcept) %>"></div>
+
+        </div>
+
+        <% if modification_class.use_field?(:project) %>
+          <%= f.text_field :project %>
+        <% end %>
+
+        <% if modification_class.use_field?(:project_new) %>
+          <%= f.check_box :project_new, custom: :switch, class: 'text-center', wrapper_class: 'col-9 offset-3 text-left mb-3' %>
+        <% end %>
+
+        <% if modification_class.use_field?(:amount) %>
+          <%= f.text_field :amount, type: :number, step: '0.01', min: 0 %>
+        <% end %>
+      </div>
+
+    <% end %>
   </div>
-
-  <% if !modification.locked_type? || modification.modification_detail? %>
-    <div id="standard_modification_detail">
-      <%= f.text_field :project %>
-      <%= f.check_box :project_new, custom: :switch, class: 'text-center', wrapper_class: 'col-9 offset-3 text-left mb-3' %>
-      <%= f.text_field :amount, type: :number, step: '0.01', min: 0 %>
-    </div>
-  <% end %>
-
-  <input id="current_type" type="hidden" value="<%= modification.type %>" />
-  <input id="detailed_modification_types" type="hidden" value="<%= amendment.detailed_modifications.map(&:name).to_json %>" />
 
   <div class="actions">
     <%= f.submit class: 'btn btn-sm btn-success' %>
     <%= link_to t('helpers.action.back'), amendment_path(amendment), class: 'btn btn-sm btn-danger' %>
   </div>
+
+
 <% end %>
 
 <%= javascript_include_tag 'pseudoiframe' %>
