--- a/app/views/amendments/browse_section.html.erb
+++ b/app/views/amendments/browse_section.html.erb
@@ -8,7 +8,7 @@
       <%= browse_title(section) %>
     <% else %>
       <%= collection_title(budget.sections) %>
-      <% budget.sections.each do |section| %>
+      <% sections.each do |section| %>
         <%= browse_link(section, browse_section_amendment_path(modification_type: modification_type, section_id: section, locked_section: locked_section?, locked_organism: locked_organism?)) %>
       <% end %>
     <% end %>
@@ -16,7 +16,7 @@
 
   <% if modification_class.use_field?(:service) %>
     <% if service %>
-      <%= reset_link(browse_section_amendment_path(modification_type: modification_type, section_id: section, service_or_organism_id: service, locked_section: locked_section?, locked_organism: locked_organism?)) %>
+      <%= reset_link(browse_section_amendment_path(modification_type: modification_type, section_id: section, locked_section: locked_section?, locked_organism: locked_organism?)) %>
       <%= browse_title(service) %>
     <% elsif section %>
         <hr>
