--- a/app/views/amendments/browse_chapter.html.erb
+++ b/app/views/amendments/browse_chapter.html.erb
@@ -1,28 +1,31 @@
 <div>
   <% if chapter %>
     <%= reset_link(browse_chapter_amendment_path(modification_type: modification_type)) %>
-    <%= browse_title(chapter) %>
+    <%= browse_title(chapter) %><%= tag(:br) %>
   <% else %>
     <%= collection_title(budget.chapters) %>
     <% budget.chapters.each do |chapter| %>
       <%= browse_link(chapter, browse_chapter_amendment_path(modification_type: modification_type, chapter_id: chapter)) %>
     <% end %>
+    <%= new_field_title_input(:chapter) %>
   <% end %>
 
   <% if article %>
     <%= reset_link(browse_chapter_amendment_path(modification_type: modification_type, chapter_id: chapter)) %>
-    <%= browse_title(article) %>
+    <%= browse_title(article) %><%= tag(:br) %>
   <% elsif chapter %>
     <hr>
     <%= collection_title(chapter.articles) %>
     <% chapter.articles.each do |article| %>
       <%= browse_link(article, browse_chapter_amendment_path(modification_type: modification_type, chapter_id: chapter, article_id: article)) %>
     <% end %>
+    <%= new_field_title_input(:article) %>
   <% end %>
 
   <% if concept %>
     <%= reset_link(browse_chapter_amendment_path(modification_type: modification_type, chapter_id: chapter, article_id: article)) %>
-    <%= browse_title(concept) %>
+    <%= browse_title_with_edit(concept) %>
+    <%= tag(:br) %>
   <% elsif article %>
     <hr>
     <%= collection_title(article.concepts) %>
@@ -30,11 +33,13 @@
       <%= added_badge_for concept %>
       <%= browse_link(concept, browse_chapter_amendment_path(modification_type: modification_type, chapter_id: chapter, article_id: article, concept_id: concept)) %>
     <% end %>
+    <%= new_field_title_input(:concept) %>
   <% end %>
 
   <% if subconcept %>
     <%= reset_link(browse_chapter_amendment_path(modification_type: modification_type, chapter_id: chapter, article_id: article, concept_id: concept)) %>
-    <%= browse_title(subconcept) %>
+    <%= browse_title_with_edit(subconcept) %>
+    <%= tag(:br) %>
   <% elsif concept %>
     <hr>
     <%= collection_title(concept.subconcepts) %>
@@ -42,6 +47,7 @@
       <%= added_badge_for subconcept %>
       <%= browse_link(subconcept, browse_chapter_amendment_path(modification_type: modification_type, chapter_id: chapter, article_id: article, concept_id: concept, subconcept_id: subconcept)) %>
     <% end %>
+    <%= new_field_title_input(:subconcept) %>
   <% end %>
 </div>
 
