--- a/app/views/amendments/browse_section.html.erb
+++ b/app/views/amendments/browse_section.html.erb
@@ -1,57 +1,58 @@
 <div>
-
   <% if modification_class.use_field?(:section) %>
     <% if section %>
-      <% unless locked_section? %>
-        <%= reset_link(browse_section_amendment_path(modification_type: modification_type, locked_section: locked_section?, locked_organism: locked_organism?)) %>
-      <% end %>
-      <%= browse_title(section) %>
+      <%= reset_link(browse_section_amendment_path(modification_type: modification_type, locked_section: locked_section?, locked_organism: locked_organism?), locked_section?) %>
+      <%= browse_title(section) %><%= tag(:br) %>
     <% else %>
       <%= collection_title(budget.sections) %>
       <% sections.each do |section| %>
         <%= browse_link(section, browse_section_amendment_path(modification_type: modification_type, section_id: section, locked_section: locked_section?, locked_organism: locked_organism?)) %>
       <% end %>
+      <%= new_field_title_input(:section) %>
     <% end %>
   <% end %>
 
   <% if modification_class.use_field?(:service) %>
     <% if service %>
       <%= reset_link(browse_section_amendment_path(modification_type: modification_type, section_id: section, locked_section: locked_section?, locked_organism: locked_organism?)) %>
-      <%= browse_title(service) %>
+      <%= browse_title(service) %><%= tag(:br) %>
     <% elsif section %>
         <hr>
         <%= collection_title(section.services) %>
         <% section.services.each do |service| %>
           <%= browse_link(service, browse_section_amendment_path(modification_type: modification_type, section_id: section, service_or_organism_id: service, locked_section: locked_section?, locked_organism: locked_organism?)) %>
         <% end %>
+        <%= new_field_title_input(:service) %>
     <% end %>
   <% end %>
 
   <% if modification_class.use_field?(:organism) %>
     <% if organism %>
-      <% unless locked_organism? %>
-        <%= reset_link(browse_section_amendment_path(modification_type: modification_type, section_id: section, locked_section: locked_section?, locked_organism: locked_organism?)) %>
-      <% end %>
-      <%= browse_title(organism) %>
+      <%= reset_link(browse_section_amendment_path(modification_type: modification_type, section_id: section, locked_section: locked_section?, locked_organism: locked_organism?), locked_organism?) %>
+      <%= browse_title(organism) %><%= tag(:br) %>
     <% elsif section %>
         <hr>
         <%= collection_title(section.organisms) %>
         <% section.organisms.each do |organism| %>
           <%= browse_link(organism, browse_section_amendment_path(modification_type: modification_type, section_id: section, service_or_organism_id: organism, locked_section: locked_section?, locked_organism: locked_organism?)) %>
         <% end %>
+        <%= new_field_title_input(:organism) %>
     <% end %>
   <% end %>
 
-  <% if modification_class.use_field?(:program) && ((service && service.class != Integer) || (organism && organism.class != Integer)) %>
+  <% if modification_class.use_field?(:program) && (service || organism) %>
     <% if program %>
       <%= reset_link(browse_section_amendment_path(modification_type: modification_type, section_id: section, service_or_organism_id: service || organism, locked_section: locked_section?, locked_organism: locked_organism?)) %>
-      <%= browse_title(program) %>
+      <%= browse_title_with_edit(program) %>
+      <%= tag(:br) %>
     <% else %>
         <hr>
         <%= collection_title(section.programs) %>
         <% programs.each do |program| %>
+          <%= added_badge_for program %>
           <%= browse_link(program, browse_section_amendment_path(modification_type: modification_type, section_id: section, service_or_organism_id: service || organism, program_id: program, locked_section: locked_section?, locked_organism: locked_organism?)) %>
         <% end %>
+        <%= new_field_title_input(:program) %>
     <% end %>
   <% end %>
 </div>
