--- a/app/views/modifications/_form.html.erb
+++ b/app/views/modifications/_form.html.erb
@@ -59,5 +59,8 @@
 <% end %>
 
 <%= javascript_include_tag 'pseudoiframe' %>
+<%= javascript_include_tag 'pseudoiframe_object_form' %>
 <%= javascript_include_tag 'modifications' %>
-<%= stylesheet_link_tag    'pseudoiframe' %>
+
+<%= stylesheet_link_tag 'pseudoiframe' %>
+<%= stylesheet_link_tag 'pseudoiframe_object_form' %>
