--- a/app/views/modifications/_form.html.erb
+++ b/app/views/modifications/_form.html.erb
@@ -30,7 +30,7 @@
 
           <div id="section" class="pseudoiframe col-12 col-sm-6" src="<%= browse_section_amendment_path(id: amendment, modification_type: modification_class.to_param, section_id: modification.section, service_or_organism_id: modification_class.use_field?(:service) ? modification.service : modification.organism, program_id: modification.program, locked_section: modification.locked_section?, locked_organism: modification.locked_organism?) %>"></div>
 
-          <div id="chapter" class="pseudoiframe col-12 col-sm-6" src="<%= browse_chapter_amendment_path(id: amendment, chapter_id: modification.chapter, article_id: modification.article, concept_id: modification.concept, subconcept_id: modification.subconcept) %>"></div>
+          <div id="chapter" class="pseudoiframe col-12 col-sm-6" src="<%= browse_chapter_amendment_path(id: amendment, modification_type: modification_class.to_param, chapter_id: modification.chapter, article_id: modification.article, concept_id: modification.concept, subconcept_id: modification.subconcept) %>"></div>
 
         </div>
 
@@ -59,5 +59,8 @@
 <% end %>
 
 <%= javascript_include_tag 'pseudoiframe' %>
+<%= javascript_include_tag 'pseudoiframe_object_form' %>
 <%= javascript_include_tag 'modifications' %>
-<%= stylesheet_link_tag    'pseudoiframe' %>
+
+<%= stylesheet_link_tag 'pseudoiframe' %>
+<%= stylesheet_link_tag 'pseudoiframe_object_form' %>
